src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__exlicit_param_unknown_reference.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: diagnostics
---
error[E089]: Invalid call parameters
   ┌─ <internal>:13:16
   │
13 │             fb(unknown := 2);
   │                ^^^^^^^^^^^^ Invalid call parameters

error[E048]: Could not resolve reference to unknown
   ┌─ <internal>:13:16
   │
13 │             fb(unknown := 2);
   │                ^^^^^^^ Could not resolve reference to unknown
